--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=${port:8080}
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_curso_mc
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
